--- a/style.css
+++ b/style.css
@@ -1,11 +1,35 @@
+/* @font-face {
+  font-family: "My Custom Font";
+  src: url("assets/Inter/static/Inter-Light.ttf");
+}
+
+body {
+  font-family: "My Custom Font", sans-serif;
+} */
+
 .name {
   text-align: center;
 }
 
-.body {
-  margin: 0 2%;
-  font-size: 16px;
-  /* font-family: "Helvetica, Arial, sans-serif"; */
+body {
+  font-family: "Helvetica, Arial, sans-serif";
+  max-width: 48rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 1em;
+}
+
+h1 h2 {
+  margin: 24px;
+}
+
+figure {
+  margin: 8px 16px;
+  font-size: 12px;
+}
+
+li {
+  padding: 4px 0;
 }
 
 .about-image {
@@ -15,8 +39,19 @@
   flex-direction: row;
 }
 
+.profile-image {
+  width: max(23%, 150px);
+  height: auto;
+  border-radius: 2%;
+}
+
 .about-bio {
   padding: 0 24px;
+}
+
+.about-text {
+  text-align: justify;
+  padding: 4px 0;
 }
 
 .company-title {
@@ -43,22 +78,17 @@
 
 .company-images {
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
 }
 
 .company-image {
-  width: 300px;
-  border-radius: 2%;
-}
-
-.profile-image {
-  width: 15%;
-  height: auto;
+  width: 240px;
   border-radius: 2%;
 }
 
 .row {
   width: 100%;
+  margin: 16px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -122,7 +152,7 @@ footer {
 }
 
 .last-updated {
-  width: -webkit-fill-available;
+  width: -webkit-max-content;
 }
 
 .education-section {
@@ -132,7 +162,40 @@ footer {
 }
 
 .education-image {
-  border-radius: 2%;
-  width: 16%;
+  width: 25%;
   height: auto;
+  border-radius: 2%;
+}
+
+.filters-div {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.project-title {
+  font-size: 18px;
+  font-weight: 600;
+  padding: 4px 0px 4px 0px;
+}
+
+.project-subsection {
+  font-size: 12px;
+  margin: 8px 0;
+}
+
+.project-description {
+  padding: 12px 0px 4px 0px;
+  text-align: justify;
+}
+
+.project-hr {
+  margin: 16px 0;
+  opacity: 0.2;
+}
+
+.project-ul {
+  padding: 0px 16px;
+  margin: 0px;
 }
