--- a/style.css
+++ b/style.css
@@ -24,78 +24,16 @@ h1 h2 {
 }
 
 figure {
+  display: table;
   margin: 8px 16px;
   font-size: 12px;
 }
 
-li {
-  padding: 4px 0;
-}
-
-.about-image {
-  width: 100%;
-  margin: 2% 0;
-  display: flex;
-  flex-direction: row;
-}
-
-.profile-image {
-  width: max(23%, 150px);
-  height: auto;
-  border-radius: 2%;
-}
-
-.about-bio {
-  padding: 0 24px;
-}
-
-.about-text {
-  text-align: justify;
-  padding: 4px 0;
-}
-
-.company-title {
-  padding: 6px 0;
-  font-weight: 600;
-}
-
-.education-title {
-  padding: 6px 0;
-  font-weight: 600;
-}
-
-.role-title {
-  padding: 4px 0;
-  font-weight: 500;
-  font-style: italic;
-}
-
-.degree-title {
-  padding: 8px 0;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.company-images {
-  display: flex;
-  justify-content: space-between;
-}
-
-.company-image {
-  width: 240px;
-  border-radius: 2%;
-}
-
-.row {
-  width: 100%;
-  margin: 16px 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-figure figcaption {
+figcaption {
   text-align: center;
+  display: table-caption;
+  caption-side: bottom;
+  padding: 4px 0;
 }
 
 a {
@@ -123,13 +61,8 @@ a:active {
   color: black;
 }
 
-.page-container {
-  position: relative;
-  min-height: 100vh;
-}
-
-.content-wrap {
-  padding-bottom: 2.5rem;
+li {
+  padding: 4px 0;
 }
 
 footer {
@@ -138,6 +71,85 @@ footer {
   width: 100%;
   height: 30px;
   font-size: 12px;
+}
+
+.about-image {
+  width: 100%;
+  margin: 2% 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.profile-image {
+  width: max(23%, 150px);
+  height: auto;
+  border-radius: 2%;
+}
+
+.about-bio {
+  padding: 0 24px;
+}
+
+.about-text {
+  text-align: justify;
+  padding: 4px 0;
+}
+
+.experience-title {
+  font-size: 20px;
+  padding: 6px 0;
+  font-weight: 600;
+}
+
+.company-title {
+  padding: 8px 0;
+  font-weight: 600;
+}
+
+.education-title {
+  padding: 4px 0;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.role-title {
+  padding: 4px 0;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.degree-title {
+  padding: 4px 0px;
+  font-weight: 400;
+  font-size: 17px;
+  font-style: italic;
+}
+
+.company-images {
+  display: flex;
+  /* justify-content: space-between; */
+}
+
+.company-image {
+  width: 240px;
+  border-radius: 2%;
+}
+
+.row {
+  width: 100%;
+  margin: 16px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  padding-bottom: 2.5rem;
 }
 
 .footer {
@@ -162,9 +174,14 @@ footer {
 }
 
 .education-image {
-  width: 25%;
+  width: 240px;
   height: auto;
   border-radius: 2%;
+}
+
+.education-subtitle {
+  padding: 20px 0;
+  font-size: 16px;
 }
 
 .filters-div {
@@ -190,7 +207,7 @@ footer {
   text-align: justify;
 }
 
-.project-hr {
+.hr {
   margin: 16px 0;
   opacity: 0.2;
 }
