--- a/style.css
+++ b/style.css
@@ -24,12 +24,13 @@ body {
   line-height: 1.2;
   margin-left: auto;
   margin-right: auto;
+  font-family: "Libre Baskerville", Libre, Georgia, Times, serif;
   /* font-family: "SF Pro Display", "SF Pro Icons"; */
   /* font-family: Arial, Helvetica, sans-serif; */
   /* font-family: "Helvetica, Arial, sans-serif"; */
   /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
   /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-  font-family: "Times New Roman", Times, serif;
+  /* font-family: "Times New Roman", Times, serif; */
   /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
   /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
 }
@@ -258,6 +259,10 @@ footer {
 }
 
 .paper-subsection {
+  padding: 8px 0;
+}
+
+.paper-authors {
   padding: 8px 0;
 }
 
