--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 30px;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 .header-container {
@@ -117,6 +117,7 @@ footer {
 }
 
 .about-text {
+  font-size: 16px;
   text-align: justify;
   padding-bottom: 24px;
 }
@@ -193,11 +194,8 @@ footer {
   justify-content: space-between;
 }
 
-.copyright-text {
-  min-width: calc(100% - 180px);
-}
-
-.last-updated {
+.footer-text {
+  color: dimgrey;
   width: -webkit-max-content;
 }
 
