--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 body {
   padding: 0 1em;
   max-width: 48rem;
-  line-height: 1.2;
+  line-height: 1.3;
   margin-left: auto;
   margin-right: auto;
   font-family: -apple-system, BlinkMacSystemFont, segoe ui, Roboto, Oxygen,
@@ -84,11 +84,14 @@ li {
 }
 
 footer {
-  /* position: absolute; */
-  bottom: 0;
-  width: 100%;
-  height: 30px;
+  /* bottom: 0; */
+  width: 90%;
+  margin: 24px 0;
   font-size: 10px;
+  max-width: 48rem;
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
 }
 
 .header-container {
@@ -138,12 +141,6 @@ footer {
   padding: 12px 0;
 }
 
-.education-title {
-  padding: 4px 0;
-  font-weight: 600;
-  font-size: 18px;
-}
-
 .role-title {
   padding: 4px 0;
   font-weight: 500;
@@ -151,9 +148,8 @@ footer {
 }
 
 .degree-title {
-  padding: 4px 0px;
-  font-weight: 400;
-  font-size: 17px;
+  font-weight: 600;
+  font-size: 16px;
   font-style: italic;
 }
 
@@ -191,22 +187,27 @@ footer {
   padding-bottom: 2.5rem;
 }
 
-.footer {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
 .footer-text {
   color: dimgrey;
   width: -webkit-max-content;
+}
+
+.education-links {
+  display: flex;
+  font-size: 14px;
+  padding: 6px 0;
+  align-items: center;
 }
 
 .education-section {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.education-figure-container {
+  height: 100%;
+  margin: 16px 0 0 0;
 }
 
 .education-image {
@@ -216,7 +217,7 @@ footer {
 }
 
 .education-subtitle {
-  padding: 20px 0;
+  padding: 12px 0;
   font-size: 16px;
 }
 
@@ -226,9 +227,16 @@ footer {
 
 .filters-div {
   display: flex;
+  padding: 6px 0;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.filter-result {
+  font-size: 12px;
+  font-style: italic;
+  padding: 20px 0 8px 0;
 }
 
 .filter-icon {
@@ -296,5 +304,7 @@ footer {
 }
 
 .footer-container {
-  margin-top: 24px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
