--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 body {
   padding: 0 1em;
   max-width: 48rem;
-  line-height: 1.3;
+  line-height: 1.4;
   margin-left: auto;
   margin-right: auto;
   font-family: -apple-system, BlinkMacSystemFont, segoe ui, Roboto, Oxygen,
@@ -43,6 +43,7 @@ h1 h2 {
 
 h3 {
   margin: 16px 0;
+  font-weight: 500;
 }
 
 figure {
@@ -115,10 +116,10 @@ footer {
 }
 
 .profile-image {
-  height: 210px;
-  width: 210px;
+  height: 220px;
+  width: 220px;
   min-width: 200px;
-  border-radius: 4%;
+  border-radius: 3%;
   margin-right: 24px;
   margin-bottom: 12px;
 }
@@ -130,9 +131,9 @@ footer {
 }
 
 .experience-title {
-  font-size: 20px;
-  padding: 6px 0;
-  font-weight: 600;
+  font-size: 18px;
+  padding: 8px 0 8px 0;
+  font-weight: 700;
 }
 
 .company-title {
@@ -227,7 +228,7 @@ footer {
 
 .filters-div {
   display: flex;
-  padding: 6px 0;
+  padding: 12px 0 6px 0;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
@@ -236,7 +237,7 @@ footer {
 .filter-result {
   font-size: 12px;
   font-style: italic;
-  padding: 20px 0 8px 0;
+  padding: 20px 0 28px 0;
 }
 
 .filter-icon {
@@ -248,6 +249,12 @@ footer {
   background-color: white;
 }
 
+.year-title {
+  font-size: 22px;
+  padding: 4px 0 8px 0;
+  font-weight: 600;
+}
+
 .project-title {
   font-size: 18px;
   font-weight: 600;
@@ -256,14 +263,14 @@ footer {
 
 .project-subsection {
   display: flex;
-  margin: 8px 0;
+  padding: 6px 0;
   flex-wrap: wrap;
   font-size: 14px;
   color: dimgrey;
 }
 
 .project-description {
-  padding: 12px 0px 4px 0px;
+  padding: 16px 0px 4px 0px;
   text-align: justify;
 }
 
