--- a/style.css
+++ b/style.css
@@ -129,7 +129,12 @@ footer {
 .school-title {
   font-size: 16px;
   font-weight: 600;
-  margin: 16px 0;
+  margin-bottom: 8px;
+}
+
+.education-description {
+  padding: 12px 0;
+  font-size: 14px;
 }
 
 .about-text {
@@ -144,33 +149,90 @@ footer {
   font-weight: 650;
 }
 
+.filter-experience-tabs {
+  gap: 4px;
+  display: flex;
+  font-size: 13px;
+  flex-direction: row;
+  padding-top: 4px;
+  padding-bottom: 28px;
+}
+
+.company {
+  padding: 8px 0;
+}
+
+.company-header {
+  display: flex;
+  flex-direction: row;
+}
+
+.company-logo-container {
+  margin-right: 16px;
+}
+
+.company-logo {
+  width: 42px;
+  height: 42px;
+}
+
 .company-title {
   font-size: 16px;
   font-weight: 550;
-  padding: 12px 0;
+  padding-bottom: 4px;
+}
+
+.role-header {
+  display: flex;
+  flex-direction: column;
+  padding: 16px 0 4px 0;
+  justify-content: space-between;
+}
+
+.role-header-item {
+  padding: 0 2px;
 }
 
 .role-title {
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 500;
-  padding: 12px 0 4px 0;
+}
+
+.role-duration {
+  font-size: 13px;
+  font-style: italic;
+  padding-top: 4px;
+}
+
+.role-description {
+  font-size: 14px;
+  padding: 16px 0;
+}
+
+.role-ul {
+  margin: 0px;
+  padding: 0px 0px 0 20px;
 }
 
 .degree-title {
-  font-size: 14px;
+  /* font-size: 12px;
   font-weight: 600;
-  font-style: italic;
+  font-style: italic; */
+  padding: 4px 0;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .company-images {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 24px;
+  /* padding-left: 24px; */
+  /* padding-top: 12px; */
   /* justify-content: space-between; */
 }
 
 .company-image {
-  width: 250px;
+  width: 190px;
   border-radius: 2%;
 }
 
@@ -185,14 +247,13 @@ footer {
   font-size: 14px;
 }
 
-.company-address {
-  margin: 4px 0;
-  font-size: 14px;
+.company-location {
+  font-size: 12px;
 }
 
 .advisor-name {
   margin: 4px 0;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .row-header {
@@ -241,6 +302,10 @@ footer {
   width: -webkit-max-content;
 }
 
+.education {
+  margin-top: 12px;
+}
+
 .education-links {
   display: flex;
   font-size: 12px;
@@ -250,7 +315,7 @@ footer {
 
 .education-section {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
 }
 
@@ -266,8 +331,8 @@ footer {
 }
 
 .education-subtitle {
-  padding: 12px 0;
-  font-size: 14px;
+  padding: 4px 0;
+  font-size: 13px;
 }
 
 .education-text {
@@ -314,7 +379,7 @@ footer {
   padding: 6px 0;
   flex-wrap: wrap;
   font-size: 12px;
-  color: dimgrey;
+  /* color: dimgrey; */
 }
 
 .project-description {
@@ -355,9 +420,14 @@ footer {
   border-radius: 16px;
 }
 
+.pad {
+  padding: 3px 0;
+  font-size: 14px;
+}
+
 .small-pad {
-  padding: 2px 0;
-  font-size: 12px;
+  padding: 4px 0;
+  font-size: 13px;
 }
 
 .footer-container {
@@ -368,4 +438,45 @@ footer {
 
 .contact {
   font-size: 14px;
+}
+
+.education-container {
+  gap: 16px;
+  display: flex;
+  margin-top: 8px;
+  align-items: flex-start;
+}
+
+.education-logo-container {
+  flex-shrink: 0;
+  height: 80px;
+  display: flex;
+  padding-top: 2px;
+  justify-content: center;
+}
+
+.education-logo {
+  width: 48px;
+  height: 48px;
+}
+
+.education-content {
+  flex: 1;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.contact {
+  padding-bottom: 24px;
+}
+
+.contact-ul {
+  margin: 0px;
+  padding: 4px 0px 20px 24px;
+}
+
+.paper-list {
+  margin: 0px;
+  padding: 4px 0px 20px 24px;
 }
